商品列表添加完成  下一步针对商品的增删改

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "App.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "md5": "^2.2.1",
     "mongodb": "^3.1.6"
   },
